完成：“修改主题色”功能

--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -1,5 +1,5 @@
 /**
-* I think element-ui's default theme color is too light for long-term use.
+* I think element-plus's default theme color is too light for long-term use.
 * So I modified the default color and you can modify it to your liking.
 **/
 
@@ -21,12 +21,12 @@ $--border-color-lighter: #e6ebf5;
 $--table-border:1px solid#dfe6ec;
 
 /* icon font path, required */
-$--font-path: 'element-plus/lib/theme-chalk/fonts.scss';
+// $--font-path: 'element-plus/lib/theme-chalk/fonts.scss';
 
-@import "element-plus/packages/theme-chalk/src/index.scss";
+// @import "element-plus/packages/theme-chalk/src/index.scss";
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
-:export {
-  theme: $--color-primary;
-}
+// :export {
+//   theme: $--color-primary;
+// }
