新增：“账户信息”弹窗组件

--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2659669 */
-  src: url('iconfont.eot?t=1625816580255'); /* IE9 */
-  src: url('iconfont.eot?t=1625816580255#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1625816580255') format('woff2'),
-       url('iconfont.woff?t=1625816580255') format('woff'),
-       url('iconfont.ttf?t=1625816580255') format('truetype'),
-       url('iconfont.svg?t=1625816580255#iconfont') format('svg');
+  src: url('iconfont.eot?t=1627549540276'); /* IE9 */
+  src: url('iconfont.eot?t=1627549540276#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1627549540276') format('woff2'),
+       url('iconfont.woff?t=1627549540276') format('woff'),
+       url('iconfont.ttf?t=1627549540276') format('truetype'),
+       url('iconfont.svg?t=1627549540276#iconfont') format('svg');
 }
 
 .iconfont {
@@ -16,12 +16,36 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-gongjuxiang:before {
+  content: "\e639";
+}
+
+.icon-setting1:before {
+  content: "\e61d";
+}
+
+.icon-setting:before {
+  content: "\e660";
+}
+
+.icon-celianggongju:before {
+  content: "\e605";
+}
+
+.icon-gengduo:before {
+  content: "\e648";
+}
+
 .icon-a-3-2d:before {
   content: "\e61a";
 }
 
 .icon-juliceliang:before {
   content: "\e604";
+}
+
+.icon-liangsuan:before {
+  content: "\e628";
 }
 
 .icon-guanbi:before {
