修改: "账户信息"弹窗

--- a/src/styles/util-panel.scss
+++ b/src/styles/util-panel.scss
@@ -30,7 +30,7 @@
     .action-button {
       font-size: 16px;
       background-color: transparent;
-      border: 1px solid #d3d3d3;
+      border: $border;
       color: #6e6e6e;
       height: 32px;
       width: 32px;
