优化：“退出登录”功能，添加提示语

--- a/src/styles/more-utils.scss
+++ b/src/styles/more-utils.scss
@@ -1,7 +1,7 @@
 .more-utils-container {
   position: absolute;
-  top: 0;
-  right: 55px;
+  top: 50px;
+  right: 0;
   background: #fff;
   overflow: hidden;
   border-radius: $map-border-radius;
