--- a/src/styles/util-panel.scss
+++ b/src/styles/util-panel.scss
@@ -13,7 +13,7 @@
     line-height: 40px;
     padding: 0 10px;
     border-bottom: $border;
-    background: #e1e4e6;
+    background: #ececec;
     display: flex;
     align-items: center;
     justify-content: space-between;
