--- a/src/styles/more-utils.scss
+++ b/src/styles/more-utils.scss
@@ -1,14 +1,22 @@
-.more-utils-container {
-  position: absolute;
-  top: 50px;
-  right: 0;
-  background: #fff;
-  overflow: hidden;
-  border-radius: $map-border-radius;
-  box-shadow: $map-box-shadow;
-  z-index: 999;
-  padding: 8px 12px;
-  width: 330px;
+.more-utils {
+  &__title {
+    display: flex;
+    border-bottom: $border;
+    padding-bottom: 10px;
+    justify-content: space-between;
+
+    .title {
+      font-weight: bold;
+    }
+
+    .settings {
+      font-size: 12px;
+
+      &:hover {
+        color: $primary-color;
+      }
+    }
+  }
 }
 
 .more-util-list {
@@ -17,12 +25,10 @@
 
   &__title {
     font-size: 12px;
-    color: #888;
     margin-top: 10px;
   }
 
   &-item {
-    width: 48px;
     margin: 8px;
     cursor: pointer;
     text-align: center;
@@ -48,27 +54,31 @@
       }
     }
 
-    &:nth-child(5n + 1) {
+    &:nth-child(4n + 1) {
       margin-left: 0;
     }
 
-    &:nth-child(5n) {
+    &:nth-child(4n) {
       margin-right: 0;
     }
 
     &__icon {
+      display: inline-block;
+      vertical-align: center;
+      line-height: 45px;
       background: #f5f5f5;
       border-radius: $map-border-radius;
-      padding: 4px 0;
+      width: 45px;
+      height: 45px;
+
+      .iconfont {
+        font-size: 22px;
+      }
     }
 
     &__name {
-      margin-top: 5px;
+      margin-top: 6px;
       font-size: 12px;
     }
   }
-}
-
-.general-utils-container {
-  border-bottom: 1px solid #eee;
 }
