新增：“截图”、“剖切”、“视线”、“高程剖面”和“日照”工具

--- a/src/styles/util-panel.scss
+++ b/src/styles/util-panel.scss
@@ -12,8 +12,7 @@
     height: 40px;
     line-height: 40px;
     padding: 0 10px;
-    border-bottom: $border;
-    background: #ececec;
+    background: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: space-between;
