--- a/src/styles/more-utils.scss
+++ b/src/styles/more-utils.scss
@@ -10,6 +10,8 @@
     }
 
     .settings {
+      display: flex;
+      align-items: center;
       font-size: 12px;
 
       &:hover {
@@ -65,11 +67,11 @@
     &__icon {
       display: inline-block;
       vertical-align: center;
-      line-height: 45px;
+      line-height: 48px;
       background: #f5f5f5;
       border-radius: $map-border-radius;
-      width: 45px;
-      height: 45px;
+      width: 48px;
+      height: 48px;
 
       .iconfont {
         font-size: 22px;
