--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2659669 */
-  src: url('iconfont.eot?t=1627617022949'); /* IE9 */
-  src: url('iconfont.eot?t=1627617022949#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1627617022949') format('woff2'),
-       url('iconfont.woff?t=1627617022949') format('woff'),
-       url('iconfont.ttf?t=1627617022949') format('truetype'),
-       url('iconfont.svg?t=1627617022949#iconfont') format('svg');
+  src: url('iconfont.eot?t=1628557246239'); /* IE9 */
+  src: url('iconfont.eot?t=1628557246239#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1628557246239') format('woff2'),
+       url('iconfont.woff?t=1628557246239') format('woff'),
+       url('iconfont.ttf?t=1628557246239') format('truetype'),
+       url('iconfont.svg?t=1628557246239#iconfont') format('svg');
 }
 
 .iconfont {
@@ -16,16 +16,28 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-bukejian:before {
+  content: "\e637";
+}
+
+.icon-kejian:before {
+  content: "\e644";
+}
+
+.icon-map-1:before {
+  content: "\e756";
+}
+
+.icon-yanjing:before {
+  content: "\e83c";
+}
+
 .icon-poumian:before {
   content: "\e636";
 }
 
 .icon-poumianfenxi1:before {
   content: "\ee08";
-}
-
-.icon-shixian:before {
-  content: "\e63b";
 }
 
 .icon-elevation-rise:before {
@@ -74,10 +86,6 @@
 
 .icon-juliceliang:before {
   content: "\e604";
-}
-
-.icon-liangsuan:before {
-  content: "\e628";
 }
 
 .icon-guanbi:before {
