--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -21,9 +21,9 @@ $--border-color-lighter: #e6ebf5;
 $--table-border:1px solid #dfe6ec;
 
 /* icon font path, required */
-// $--font-path: 'element-plus/lib/theme-chalk/fonts.scss';
+$--font-path: 'element-plus/lib/theme-chalk/fonts.scss';
 
-// @import "element-plus/packages/theme-chalk/src/index.scss";
+@import "element-plus/packages/theme-chalk/src/index.scss";
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
