新增：“工具面板”组件

--- a/src/styles/element-plus.scss
+++ b/src/styles/element-plus.scss
@@ -1,4 +1,8 @@
 // cover some element-plus styles
 .el-dialog{
     border-radius: 6px !important;
+
+    &__headerbtn .el-dialog__close{
+        font-size: 20px;
+    }
 }
