--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2659669 */
-  src: url('iconfont.eot?t=1629075600904'); /* IE9 */
-  src: url('iconfont.eot?t=1629075600904#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1629075600904') format('woff2'),
-       url('iconfont.woff?t=1629075600904') format('woff'),
-       url('iconfont.ttf?t=1629075600904') format('truetype'),
-       url('iconfont.svg?t=1629075600904#iconfont') format('svg');
+  src: url('iconfont.eot?t=1630381578033'); /* IE9 */
+  src: url('iconfont.eot?t=1630381578033#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1630381578033') format('woff2'),
+       url('iconfont.woff?t=1630381578033') format('woff'),
+       url('iconfont.ttf?t=1630381578033') format('truetype'),
+       url('iconfont.svg?t=1630381578033#iconfont') format('svg');
 }
 
 .iconfont {
@@ -14,6 +14,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-quanping:before {
+  content: "\e697";
+}
+
+.icon-quxiaoquanping:before {
+  content: "\e633";
 }
 
 .icon-QQ:before {
