新增：导航组件，有问题待修复

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -19,3 +19,11 @@ $bottom-height: 24px;
 
 $map-border-radius: 4px;
 $map-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
+
+
+$menuText: #333333;
+$menuActiveText: $primary-color;
+$subMenuText: #666666;
+$subMenuActiveText: $primary-color;
+
+$menuBg: transparent;
