--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -298,6 +298,8 @@ aside {
   // 满屏页面
   .overspread-page {
     min-height: calc(100vh - 30px);
+    max-height: calc(100vh - 30px);
+    overflow-y: auto;
     margin: 15px;
   }
 
@@ -305,6 +307,7 @@ aside {
     // 满屏页面
     .overspread-page {
       min-height: calc(100vh - #{$header-height} - 30px);
+      max-height: calc(100vh - #{$header-height} - 30px);
     }
   }
 }
