新增：“删除”和“批量删除”功能

--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -7,7 +7,7 @@ $--colors: (
     "base": #f0ad4e,
   ),
   "danger": (
-    "base": #ff4949,
+    "base": #e42b2b,
   ),
   "error": (
     "base": #db2828,
