新增：“新增/编辑账户”功能

--- a/src/styles/element-plus.scss
+++ b/src/styles/element-plus.scss
@@ -1,12 +1,16 @@
 // cover some element-plus styles
-.el-dialog{
-    border-radius: 6px !important;
+.el-dialog {
+  border-radius: 6px !important;
 
-    &__headerbtn .el-dialog__close{
-        font-size: 20px;
-    }
+  &__headerbtn .el-dialog__close {
+    font-size: 20px;
+  }
 }
 
-.el-card{
-    border-radius: 4px;
+.el-card {
+  border-radius: 4px;
+}
+
+.el-pager li {
+  outline: none !important;
 }
