--- a/src/styles/util-panel.scss
+++ b/src/styles/util-panel.scss
@@ -12,13 +12,14 @@
     height: 40px;
     line-height: 40px;
     padding: 0 10px;
-    background: #f5f5f5;
+    background: #eceef3;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     .el-icon-question,
-    .el-icon-close {
+    .el-icon-close,
+    .icon-zuidahua {
       cursor: pointer;
 
       &:hover {
