--- a/src/styles/esri.scss
+++ b/src/styles/esri.scss
@@ -22,6 +22,13 @@
   }
 }
 
+.esri-ui-inner-container {
+  top: 5px !important;
+  left: 5px !important;
+  right: 5px !important;
+  bottom: 5px !important;
+}
+
 .esri-button {
   background: $primary-color;
   border-color: $primary-color;
