--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2659669 */
-  src: url('iconfont.eot?t=1639125775312'); /* IE9 */
-  src: url('iconfont.eot?t=1639125775312#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('iconfont.woff2?t=1639125775312') format('woff2'),
-       url('iconfont.woff?t=1639125775312') format('woff'),
-       url('iconfont.ttf?t=1639125775312') format('truetype'),
-       url('iconfont.svg?t=1639125775312#iconfont') format('svg');
+  src: url('iconfont.eot?t=1640077845480'); /* IE9 */
+  src: url('iconfont.eot?t=1640077845480#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('iconfont.woff2?t=1640077845480') format('woff2'),
+       url('iconfont.woff?t=1640077845480') format('woff'),
+       url('iconfont.ttf?t=1640077845480') format('truetype'),
+       url('iconfont.svg?t=1640077845480#iconfont') format('svg');
 }
 
 .iconfont {
@@ -14,6 +14,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-liebiao:before {
+  content: "\e602";
 }
 
 .icon-bili:before {
