--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 // base color
 
-$primary-color: var(--primaryColor, #1890ff);
+$primary-color: var(--primaryColor, #168bf2);
 
-$blue: #1890ff;
+$blue: #168bf2;
 $light-blue: #3a71a8;
 $red: #e42b2b;
 $pink: #e65d6e;
@@ -18,4 +18,4 @@ $header-height: 56px;
 $bottom-height: 24px;
 
 $map-border-radius: 4px;
-$map-box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.2);
+$map-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);
