修改：表格禁用样式

--- a/src/styles/element-plus.scss
+++ b/src/styles/element-plus.scss
@@ -25,3 +25,9 @@
         color: $primary-color !important;
     }
 }
+
+.el-table {
+    th.el-table__cell {
+      background: #f8f8f8;
+    }
+  }
