--- a/src/styles/element-plus.scss
+++ b/src/styles/element-plus.scss
@@ -1,6 +1,7 @@
 // cover some element-plus styles
 .el-dialog {
     border-radius: 6px !important;
+
     &__headerbtn .el-dialog__close {
         font-size: 20px;
     }
@@ -22,17 +23,24 @@
     // background: lighten(#{$primary-color}, 40%) !important;
     color: $primary-color !important;
     align-items: flex-start;
+
     .el-alert__closebtn {
         color: $primary-color !important;
     }
 
-    .el-alert__content{
+    .el-alert__content {
         padding-right: 10px;
     }
 }
 
 .el-table {
     th.el-table__cell {
-      background: #f8f8f8;
+        background: #f8f8f8;
     }
-  }
+}
+
+.el-form--inline {
+    .el-form-item {
+        margin-right: 15px !important;
+    }
+}
